# lab64

./: .clang-format  .gitignore  CMakeLists.txt  Canvas.h  README.md  RandomGenerator.cpp  RandomGenerator.h  main.cpp
configs/: blue-velvet.json  dark-age.json  prismatic.json
examples/: create-examples.sh
